unpackaged/main/default/objects/Purchase_Order__c/Purchase_Order__c.object-meta.xml
<CustomObject>
    <description>Purchase Order for Material and Sub Contractor.</description>
    <label>Purchase Order</label>
    <nameField>
        <displayFormat>PO-{000000}</displayFormat>
        <label>Purchase Order Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Purchase Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>