unpackaged/main/default/objects/Purchase_Order__c/fields/Case_Reference__c.field-meta.xml
<CustomField>
    <fullName>Case_Reference__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Case Reference when called</description>
    <label>Case Reference</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Purchase Orders</relationshipLabel>
    <relationshipName>Purchase_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>