unpackaged/main/default/objects/Purchase_Order__c/fields/Check_user_active__c.field-meta.xml
<CustomField>
    <fullName>Check_user_active__c</fullName>
    <formula>CreatedBy.IsActive</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Check user active</label>
    <type>Checkbox</type>
</CustomField>