unpackaged/main/default/objects/Purchase_Order__c/fields/CMD_Aspect_Country__c.field-meta.xml
<CustomField>
    <fullName>CMD_Aspect_Country__c</fullName>
    <formula>$CustomMetadata.Aspect_Setting__mdt.Aspect_Maintenance_Services_Ltd.Country__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CMD Aspect Country</label>
    <type>Text</type>
</CustomField>