unpackaged/main/default/objects/Purchase_Order__c/fields/CMD_Aspect_County_State__c.field-meta.xml
<CustomField>
    <fullName>CMD_Aspect_County_State__c</fullName>
    <formula>$CustomMetadata.Aspect_Setting__mdt.Aspect_Maintenance_Services_Ltd.County_State__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CMD Aspect County/State</label>
    <type>Text</type>
</CustomField>