unpackaged/main/default/objects/Purchase_Order__c/fields/Customer_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Customer_Invoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Customer Invoice linked to this Purchase Order. If the Purchase Order is at Status Sent, the value of the Purchase Order + markup must be included with the Customer Invoice.</description>
    <label>Customer Invoice</label>
    <referenceTo>Customer_Invoice__c</referenceTo>
    <relationshipLabel>Purchase Orders</relationshipLabel>
    <relationshipName>Purchase_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>