unpackaged/main/default/objects/Purchase_Order__c/fields/Customer_PO_Value__c.field-meta.xml
<CustomField>
    <fullName>Customer_PO_Value__c</fullName>
    <description>Customer Purchase Value inclusive of markup</description>
    <label>Customer PO Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>