unpackaged/main/default/objects/Purchase_Order__c/fields/Date_Required__c.field-meta.xml
<CustomField>
    <fullName>Date_Required__c</fullName>
    <description>Date the Material or Sub Contractor service is required.</description>
    <label>Date Required</label>
    <type>Date</type>
</CustomField>