unpackaged/main/default/objects/Purchase_Order__c/fields/Deliver_To__c.field-meta.xml
<CustomField>
    <fullName>Deliver_To__c</fullName>
    <description>Where the parts should be delivered to</description>
    <label>Deliver To</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Deliver_to_for_Purchase_Ledger</valueSetName>
    </valueSet>
</CustomField>