unpackaged/main/default/objects/Purchase_Order__c/fields/Delivery_City__c.field-meta.xml
<CustomField>
    <fullName>Delivery_City__c</fullName>
    <description>Delivery City of the Purchase Order</description>
    <label>Delivery City</label>
    <length>40</length>
    <type>Text</type>
</CustomField>