unpackaged/main/default/objects/Purchase_Order__c/fields/Delivery_Country__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Country__c</fullName>
    <description>Delivery Country of the Purchase Order</description>
    <label>Delivery Country</label>
    <length>80</length>
    <type>Text</type>
</CustomField>