unpackaged/main/default/objects/Purchase_Order__c/fields/Delivery_Note__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Note__c</fullName>
    <label>Delivery Note</label>
    <type>TextArea</type>
</CustomField>