unpackaged/main/default/objects/Purchase_Order__c/fields/Delivery_Options__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Options__c</fullName>
    <description>This is the options for delivering the Purchase Orders</description>
    <label>Delivery Options</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Delivery_Options</valueSetName>
    </valueSet>
</CustomField>