unpackaged/main/default/objects/Purchase_Order__c/fields/Delivery_PostalCode__c.field-meta.xml
<CustomField>
    <fullName>Delivery_PostalCode__c</fullName>
    <description>Delivery Postal code of the Purchase Order</description>
    <label>Delivery PostalCode</label>
    <length>20</length>
    <type>Text</type>
</CustomField>