unpackaged/main/default/objects/Purchase_Order__c/fields/Delivery_State__c.field-meta.xml
<CustomField>
    <fullName>Delivery_State__c</fullName>
    <description>Delivery State of the Purchase Order</description>
    <label>Delivery State</label>
    <length>80</length>
    <type>Text</type>
</CustomField>