unpackaged/main/default/objects/Purchase_Order__c/fields/Delivery_Street__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Street__c</fullName>
    <description>Delivery Street of the Purchase Order</description>
    <label>Delivery Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>