unpackaged/main/default/objects/Purchase_Order__c/fields/Delivery_to_Text__c.field-meta.xml
<CustomField>
    <fullName>Delivery_to_Text__c</fullName>
    <formula>Requested_By__r.FirstName&amp;&quot; &quot;&amp; Requested_By__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Delivery to Text</label>
    <type>Text</type>
</CustomField>