unpackaged/main/default/objects/Purchase_Order__c/fields/Engineer__c.field-meta.xml
<CustomField>
    <fullName>Engineer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Special notes pertaining to the delivery / collection</description>
    <label>Engineer</label>
    <referenceTo>ServiceResource</referenceTo>
    <relationshipName>Purchase_Ledgers1</relationshipName>
    <type>Lookup</type>
</CustomField>