unpackaged/main/default/objects/Purchase_Order__c/fields/Engineer_Email__c.field-meta.xml
<CustomField>
    <fullName>Engineer_Email__c</fullName>
    <description>This is the email address for the Engineer on the Purchase Order</description>
    <label>Engineer Email</label>
    <type>Email</type>
</CustomField>