unpackaged/main/default/objects/Purchase_Order__c/fields/Engineer_that_confirmed_collection_of_PO__c.field-meta.xml
<CustomField>
    <fullName>Engineer_that_confirmed_collection_of_PO__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>To be completed via the mobile app when an Engineer confirms they have collected a Purchase Order from the supplier.</description>
    <inlineHelpText>To be completed via the mobile app when an Engineer confirms they have collected a Purchase Order from the supplier.</inlineHelpText>
    <label>Engineer that confirmed collection of PO</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Purchase_Orders1</relationshipName>
    <type>Lookup</type>
</CustomField>