unpackaged/main/default/objects/Purchase_Order__c/fields/Form_URL_link__c.field-meta.xml
<CustomField>
    <fullName>Form_URL_link__c</fullName>
    <formula>IF(
				RecordType.DeveloperName =&quot;Purchase_Order&quot;,
				&quot;https://salesforce.123formbuilder.com/form-4802819/?recordId=&quot;&amp;Id,
				   IF(
											RecordType.DeveloperName =&quot;Purchase_Order_Return&quot;,
											&quot;https://salesforce.123formbuilder.com/form-4828949/?recordId=&quot;&amp;Id,
											&quot;N/A&quot; 
							  )
   )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Form URL link</label>
    <type>Text</type>
</CustomField>