unpackaged/main/default/objects/Purchase_Order__c/fields/General_Ledger_Code__c.field-meta.xml
<CustomField>
    <fullName>General_Ledger_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>GL code for the purchase order. Derived from the GL Code for Type of Purchase, Customer(Domestic/Commercial), Payment Type(Cash/Credit), Trade</description>
    <label>General Ledger Code</label>
    <referenceTo>General_Ledger_Code__c</referenceTo>
    <relationshipName>Purchase_Ledgers</relationshipName>
    <type>Lookup</type>
</CustomField>