unpackaged/main/default/objects/Purchase_Order__c/fields/Has_Engineer_collected_the_PO__c.field-meta.xml
<CustomField>
    <fullName>Has_Engineer_collected_the_PO__c</fullName>
    <description>To be set via the mobile app if an Engineer has confirmed they have collected the Purchase Order form the supplier.</description>
    <inlineHelpText>To be set via the mobile app if an Engineer has confirmed they have collected the Purchase Order form the supplier.</inlineHelpText>
    <label>Has Engineer collected the PO?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>