unpackaged/main/default/objects/Purchase_Order__c/fields/Hire_Period_From_Date__c.field-meta.xml
<CustomField>
    <fullName>Hire_Period_From_Date__c</fullName>
    <label>Hire Period From Date</label>
    <type>Date</type>
</CustomField>