unpackaged/main/default/objects/Purchase_Order__c/fields/Manual_Override__c.field-meta.xml
<CustomField>
    <fullName>Manual_Override__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Manually override the customer markup</description>
    <inlineHelpText>If this is unticked, the address will default to the selected delivery address when saved</inlineHelpText>
    <label>Select for different delivery address</label>
    <type>Checkbox</type>
</CustomField>