unpackaged/main/default/objects/Purchase_Order__c/fields/Markup__c.field-meta.xml
<CustomField>
    <fullName>Markup__c</fullName>
    <description>Purchase Order markup</description>
    <label>Markup</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Markup</valueSetName>
    </valueSet>
</CustomField>