unpackaged/main/default/objects/Purchase_Order__c/fields/None_Option__c.field-meta.xml
<CustomField>
    <fullName>None_Option__c</fullName>
    <label>None Option</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>