unpackaged/main/default/objects/Purchase_Order__c/fields/Number_of_PO_line_items__c.field-meta.xml
<CustomField>
    <fullName>Number_of_PO_line_items__c</fullName>
    <description>This will be used as part of a Validation rule and counts the number of line items</description>
    <label>Number of PO line items</label>
    <summaryForeignKey>Purchase_Order_Line_Item__c.Purchase_Order__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>