unpackaged/main/default/objects/Purchase_Order__c/fields/Original_Purchase_Order__c.field-meta.xml
<CustomField>
    <fullName>Original_Purchase_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Original Purchase Order</label>
    <referenceTo>Purchase_Order__c</referenceTo>
    <relationshipLabel>Purchase Order Returns</relationshipLabel>
    <relationshipName>Purchase_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>