unpackaged/main/default/objects/Purchase_Order__c/fields/PB_Cumulative_Total__c.field-meta.xml
<CustomField>
    <fullName>PB_Cumulative_Total__c</fullName>
    <formula>Rolled_up_POLI_Inc_VAT__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PB Cumulative Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>