unpackaged/main/default/objects/Purchase_Order__c/fields/PO_Actual_Value__c.field-meta.xml
<CustomField>
    <fullName>PO_Actual_Value__c</fullName>
    <description>Actual Value of the Purchase Order</description>
    <label>PO Actual Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>