unpackaged/main/default/objects/Purchase_Order__c/fields/PO_Email_to_Supplier_Sent_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>PO_Email_to_Supplier_Sent_Date_Time__c</fullName>
    <label>PO Email to Supplier Sent Date/Time</label>
    <type>DateTime</type>
</CustomField>