unpackaged/main/default/objects/Purchase_Order__c/fields/PO_Projected_Value__c.field-meta.xml
<CustomField>
    <fullName>PO_Projected_Value__c</fullName>
    <description>Total of the Purchase Order Line Items WITH VAT</description>
    <inlineHelpText>Total of the Purchase Order Line Items WITH VAT</inlineHelpText>
    <label>PO Projected Value</label>
    <summarizedField>Purchase_Order_Line_Item__c.Purchase_Order_Line_Amount_Incl_VAT__c</summarizedField>
    <summaryForeignKey>Purchase_Order_Line_Item__c.Purchase_Order__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>