unpackaged/main/default/objects/Purchase_Order__c/fields/PO_Return_Amount__c.field-meta.xml
<CustomField>
    <fullName>PO_Return_Amount__c</fullName>
    <formula>Original_Purchase_Order__r.PO_Actual_Value__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PO Return Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>