unpackaged/main/default/objects/Purchase_Order__c/fields/PO_Return_Amount_Incl_VAT__c.field-meta.xml
<CustomField>
    <fullName>PO_Return_Amount_Incl_VAT__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Rollup of PO Returns at status of Sent/Issued</description>
    <label>PO Return Amount (Incl VAT)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>