unpackaged/main/default/objects/Purchase_Order__c/fields/PO_Type__c.field-meta.xml
<CustomField>
    <fullName>PO_Type__c</fullName>
    <formula>Supplier_Account__r.Record_Type_Name__c &amp; &quot; &quot; &amp; TEXT( Supplier_Account__r.Account_Type__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PO Type</label>
    <type>Text</type>
</CustomField>