unpackaged/main/default/objects/Purchase_Order__c/fields/PO_value_Inc_POR__c.field-meta.xml
<CustomField>
    <fullName>PO_value_Inc_POR__c</fullName>
    <label>PO value Including Return</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>