unpackaged/main/default/objects/Purchase_Order__c/fields/POLI_Data_Added__c.field-meta.xml
<CustomField>
    <fullName>POLI_Data_Added__c</fullName>
    <defaultValue>false</defaultValue>
    <description>For other processes - to signify that the Purchase Order Line Item data has been added/created, as created after PO.</description>
    <inlineHelpText>For other processes - to signify that the Purchase Order Line Item data has been added/created, as created after PO.</inlineHelpText>
    <label>POLI Data Added</label>
    <type>Checkbox</type>
</CustomField>