unpackaged/main/default/objects/Purchase_Order__c/fields/POR_Already_Raised__c.field-meta.xml
<CustomField>
    <fullName>POR_Already_Raised__c</fullName>
    <defaultValue>false</defaultValue>
    <label>POR Already Raised</label>
    <type>Checkbox</type>
</CustomField>