unpackaged/main/default/objects/Purchase_Order__c/fields/Product_Description__c.field-meta.xml
<CustomField>
    <fullName>Product_Description__c</fullName>
    <description>Product Description form the Purchase Order Line Item</description>
    <inlineHelpText>Product Description form the Purchase Order Line Item</inlineHelpText>
    <label>Product Description</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>