unpackaged/main/default/objects/Purchase_Order__c/fields/Purchase_Order_Document_URL__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Order_Document_URL__c</fullName>
    <label>Purchase Order Document URL</label>
    <type>Url</type>
</CustomField>