unpackaged/main/default/objects/Purchase_Order__c/fields/Raised_By__c.field-meta.xml
<CustomField>
    <fullName>Raised_By__c</fullName>
    <formula>Engineer__r.Name</formula>
    <label>Raised By</label>
    <type>Text</type>
</CustomField>