unpackaged/main/default/objects/Purchase_Order__c/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <description>Reason why the Purchase Order was cancelled or materials were returned need to be entered.</description>
    <label>Reason Cancelled or Returned</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>