unpackaged/main/default/objects/Purchase_Order__c/fields/Reason_for_Return__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Return__c</fullName>
    <label>Reason for Return</label>
    <type>TextArea</type>
</CustomField>