unpackaged/main/default/objects/Purchase_Order__c/fields/Report_Rolled_up_VAT_Amount__c.field-meta.xml
<CustomField>
    <fullName>Report_Rolled_up_VAT_Amount__c</fullName>
    <formula>Rolled_up_VAT_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Report Rolled up VAT Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>