unpackaged/main/default/objects/Purchase_Order__c/fields/Rolled_up_POLI_Ex_VAT_With_MarkUp__c.field-meta.xml
<CustomField>
    <fullName>Rolled_up_POLI_Ex_VAT_With_MarkUp__c</fullName>
    <description>IF
(
Rolled_up_POLI_Ex_VAT__c&lt;=$CustomMetadata.Markup_Band__mdt.Band_0_100.To_Band__c, Rolled_up_POLI_Ex_VAT__c*(1+$CustomMetadata.Markup_Band__mdt.Band_0_100.Markup__c),

IF
(
Rolled_up_POLI_Ex_VAT__c&lt;=$CustomMetadata.Markup_Band__mdt.Band_1001.To_Band__c, Rolled_up_POLI_Ex_VAT__c*(1+$CustomMetadata.Markup_Band__mdt.Band_101_1000.To_Band__c),
Rolled_up_POLI_Ex_VAT__c*(1+$CustomMetadata.Markup_Band__mdt.Band_1001.Markup__c)
))</description>
    <formula>IF
(
Rolled_up_POLI_Ex_VAT__c&lt;=$CustomMetadata.Markup_Band__mdt.Band_0_100.To_Band__c, Rolled_up_POLI_Ex_VAT__c*(1+$CustomMetadata.Markup_Band__mdt.Band_0_100.Markup__c),

IF
(
Rolled_up_POLI_Ex_VAT__c&lt;=$CustomMetadata.Markup_Band__mdt.Band_101_1000.To_Band__c, Rolled_up_POLI_Ex_VAT__c*(1+$CustomMetadata.Markup_Band__mdt.Band_101_1000.Markup__c),Rolled_up_POLI_Ex_VAT__c*(1+$CustomMetadata.Markup_Band__mdt.Band_1001.Markup__c)
))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rolled up POLI Ex VAT With MarkUp</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>