unpackaged/main/default/objects/Purchase_Order__c/fields/Rolled_up_POLI_Inc_VAT__c.field-meta.xml
<CustomField>
    <fullName>Rolled_up_POLI_Inc_VAT__c</fullName>
    <label>Cumulative Total (Inc VAT)</label>
    <summarizedField>Purchase_Order_Line_Item__c.Purchase_Order_Line_Amount_Incl_VAT__c</summarizedField>
    <summaryForeignKey>Purchase_Order_Line_Item__c.Purchase_Order__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>