unpackaged/main/default/objects/Purchase_Order__c/fields/Rolled_up_VAT_Amount__c.field-meta.xml
<CustomField>
    <fullName>Rolled_up_VAT_Amount__c</fullName>
    <label>Rolled up VAT Amount</label>
    <summarizedField>Purchase_Order_Line_Item__c.VAT_Amount__c</summarizedField>
    <summaryForeignKey>Purchase_Order_Line_Item__c.Purchase_Order__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>