unpackaged/main/default/objects/Purchase_Order__c/fields/Send_Reminder_Date__c.field-meta.xml
<CustomField>
    <fullName>Send_Reminder_Date__c</fullName>
    <description>Required to send the Notification</description>
    <formula>Hire_Period_To_Date__c -1</formula>
    <label>Send Reminder Date</label>
    <type>Date</type>
</CustomField>