unpackaged/main/default/objects/Purchase_Order__c/fields/Siclops_Reference_c__c.field-meta.xml
<CustomField>
    <fullName>Siclops_Reference_c__c</fullName>
    <label>Siclops_Reference__c</label>
    <length>22</length>
    <type>Text</type>
</CustomField>