unpackaged/main/default/objects/Purchase_Order__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <defaultValue>&#39;Draft&#39;</defaultValue>
    <description>This is the Status of the Purchase Order</description>
    <label>Purchase Order Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Purchase_Ledger_Status</valueSetName>
    </valueSet>
</CustomField>