unpackaged/main/default/objects/Purchase_Order__c/fields/Subcontractor_From_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Subcontractor_From_Date_Time__c</fullName>
    <label>Subcontractor From Date/Time</label>
    <type>DateTime</type>
</CustomField>