unpackaged/main/default/objects/Purchase_Order__c/fields/Subcontractor_To_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Subcontractor_To_Date_Time__c</fullName>
    <label>Subcontractor To Date/Time</label>
    <type>DateTime</type>
</CustomField>