unpackaged/main/default/objects/Purchase_Order__c/fields/Supplier_City__c.field-meta.xml
<CustomField>
    <fullName>Supplier_City__c</fullName>
    <formula>Supplier_Site__r.Site_City__c 

/*Supplier_Account__r.BillingCity*/</formula>
    <label>Supplier City</label>
    <type>Text</type>
</CustomField>