unpackaged/main/default/objects/Purchase_Order__c/fields/Supplier_Contact__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Supplier’s contact</description>
    <label>Supplier Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Purchase_Ledgers</relationshipName>
    <type>Lookup</type>
</CustomField>