unpackaged/main/default/objects/Purchase_Order__c/fields/Supplier_Country__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Country__c</fullName>
    <formula>Supplier_Site__r.Site_Country__c 


/*Supplier_Account__r.BillingCountry*/</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Supplier Country</label>
    <type>Text</type>
</CustomField>