unpackaged/main/default/objects/Purchase_Order__c/fields/Supplier_Email__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Email__c</fullName>
    <description>This field will populate when an account has been Assigned to the Purchase Order and will generate an email into this field on Process builder.</description>
    <label>Supplier Contact Email</label>
    <type>Email</type>
</CustomField>