unpackaged/main/default/objects/Purchase_Order__c/fields/Supplier_Fax__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Fax__c</fullName>
    <formula>Supplier_Contact__r.Fax</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Supplier Fax</label>
    <type>Text</type>
</CustomField>