unpackaged/main/default/objects/Purchase_Order__c/fields/Supplier_Invoice_Amount__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Invoice_Amount__c</fullName>
    <label>Supplier Invoice Amount</label>
    <summarizedField>Supplier_Invoice__c.Invoice_Value_Gross__c</summarizedField>
    <summaryForeignKey>Supplier_Invoice__c.Purchase_Order__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>