unpackaged/main/default/objects/Purchase_Order__c/fields/Supplier_Mobile__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Mobile__c</fullName>
    <formula>Supplier_Contact__r.MobilePhone</formula>
    <label>Supplier Mobile</label>
    <type>Text</type>
</CustomField>