unpackaged/main/default/objects/Purchase_Order__c/fields/Supplier_Name__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Name__c</fullName>
    <formula>Supplier_Site__r.Name 
/*Supplier_Account__r.Name*/</formula>
    <label>Supplier Name</label>
    <type>Text</type>
</CustomField>