unpackaged/main/default/objects/Purchase_Order__c/fields/Supplier_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Postal_Code__c</fullName>
    <formula>Supplier_Site__r.Site_PostalCode__c 

/*Supplier_Account__r.BillingPostalCode*/</formula>
    <label>Supplier Postal Code</label>
    <type>Text</type>
</CustomField>