unpackaged/main/default/objects/Purchase_Order__c/fields/Supplier_Site__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Site__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Supplier Site</label>
    <referenceTo>Site__c</referenceTo>
    <relationshipLabel>Purchase Orders</relationshipLabel>
    <relationshipName>Purchase_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>