unpackaged/main/default/objects/Purchase_Order__c/fields/Supplier_State__c.field-meta.xml
<CustomField>
    <fullName>Supplier_State__c</fullName>
    <formula>Supplier_Site__r.Site_State__c 

/*Supplier_Account__r.BillingState*/</formula>
    <label>Supplier State</label>
    <type>Text</type>
</CustomField>