unpackaged/main/default/objects/Purchase_Order__c/fields/Supplier_Street__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Street__c</fullName>
    <formula>Supplier_Site__r.Site_Street__c 

/*Supplier_Account__r.BillingStreet*/</formula>
    <label>Supplier Street</label>
    <type>Text</type>
</CustomField>