unpackaged/main/default/objects/Purchase_Order__c/fields/Supplier_Telephone__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Telephone__c</fullName>
    <description>This is the Supplier Contact Telephone</description>
    <formula>Supplier_Contact__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Supplier Telephone</label>
    <type>Text</type>
</CustomField>