unpackaged/main/default/objects/Purchase_Order__c/fields/Total_PO_Amount_Incl_VAT__c.field-meta.xml
<CustomField>
    <fullName>Total_PO_Amount_Incl_VAT__c</fullName>
    <formula>Rolled_up_POLI_Ex_VAT__c +  Rolled_up_VAT_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total PO Amount Incl. VAT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>