unpackaged/main/default/objects/Purchase_Order__c/fields/Total_Rolled_up_POLI_incl_VAT__c.field-meta.xml
<CustomField>
    <fullName>Total_Rolled_up_POLI_incl_VAT__c</fullName>
    <description>Total of Rolled up POLI Ex VAT + Rolled up VAT Amount</description>
    <formula>BLANKVALUE(Rolled_up_POLI_Ex_VAT__c,0)+BLANKVALUE(Rolled_up_VAT_Amount__c,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total of Rolled up POLI Ex VAT + Rolled up VAT Amount</inlineHelpText>
    <label>Total Rolled up POLI incl. VAT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>