unpackaged/main/default/objects/Purchase_Order__c/fields/Total_Supplier_Invoice_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Supplier_Invoice_Amount__c</fullName>
    <description>This is the Total amount for the Supplier Invoice.</description>
    <label>Total Supplier Invoice Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>