unpackaged/main/default/objects/Purchase_Order__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>This is type of  Purchase Order e.g Materials, Sub-Contractor</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Purchase_Ledger_Type</valueSetName>
    </valueSet>
</CustomField>