unpackaged/main/default/objects/Purchase_Order__c/fields/Work_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>Work_Order_Number__c</fullName>
    <formula>Work_Order__r.WorkOrderNumber</formula>
    <label>Work Order Number</label>
    <type>Text</type>
</CustomField>