unpackaged/main/default/objects/Purchase_Order__c/recordTypes/Purchase_Order_Return.recordType-meta.xml
<RecordType>
    <fullName>Purchase_Order_Return</fullName>
    <active>true</active>
    <label>Purchase Order Return</label>
</RecordType>